# AgriTech-DataEngieeringProject

./: README.md  pyproject.toml
notebooks/: fetching.ipynb  iowa.csv  iowa.las  loading.ipynb
src/package/: agritech_module.py
