[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "agritechproject_StellaMutacho"
version = "0.0.1"
authors = [
  { name="Stella Mutacho", email="stellamutacho@gmail.com" },
]
description = "A Data Engineering Project on lidar data for AgriTech"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Stella-Mutacho/AgriTech-DataEngineeringProject.git"
"Bug Tracker" = "https://github.com/Stella-Mutacho/AgriTech-DataEngineeringProject/issues"